2003-06-13  Nathanael Nerode  <neroden@gcc.gnu.org>

	PR other/1494
	* config/alpha/openbsd.h, config/i386/openbsd.h,
	config/m68k/openbsd.h, config/sparc/openbsd.h: Remove
	residual reference to EGCS.

2003-06-13  Richard Earnshaw  <rearnsha@arm.com>

	* arm.c (output_call_mem): If the address references the link-register
	use an instruction sequence that avoids early-clobbering IP.
	(eliminate_lr2ip): Delete.

2003-06-13  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* c-format.c (format_types_orig): Disallow '*' width/precision in
	asm_fprintf format checks.

2003-06-13  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/s390/s390.c (s390_va_arg): Fix alignment when retrieving 
	non-integral types from integer register save area slots.

2003-06-13  Nathanael Nerode  <neroden@gcc.gnu.org>

	* config/i386/svr3dbx.h: GNU CC -> GCC; Intel 385 -> Intel 386.

2003-06-13  Florian Weimer  <fw@deneb.enyo.de>

	* doc/invoke.texi (SPARC Options): Document ``-mimpure-text''.

2003-06-13  Kaz Kojima  <kkojima@gcc.gnu.org>

	* config/sh/linux.h (TARGET_ASM_FILE_END): Set TARGET_ASM_FILE_END
	to file_end_indicate_exec_stack.

2003-06-12  Richard Henderson  <rth@redhat.com>

	PR target/11089
	* config/i386/i386.md (sse_movaps): Use an expander to force
	one operand to be a register.
	(sse_movups): Likewise.

2003-06-13  Doug Evans  <dje@sebabeach.org>

	Remove some build warnings.
	* config/m32r/initfini.c (__CTOR_LIST__,__DTOR_LIST__): Attribute used.
	(__do_global_ctors,__do_global_dtors): Ditto.

2003-06-12  Richard Henderson  <rth@redhat.com>

	PR middle-end/10557
	* rtlanal.c (subreg_offset_representable_p): Relax subreg check.

2003-06-13  Kazu Hirata  <kazu@cs.umass.edu>

	* config/m32r/m32r.md: Fix a comment typo.

2003-06-13  Eric Botcazou  <ebotcazou@libertysurf.fr>
            Christian Ehrhardt <ehrhardt@mathematik.uni-ulm.de>

	PR target/10142
	* config/sparc/sparc.c (function_arg_record_value_parms): Add
	new 'stack' field.